removes some comments and xtable dependency

--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -31,7 +31,7 @@ source("load_ppnets.R")
 
 This will run the model calculations and produce two objects: 
 
-* *pp.nets*: a list of flow matrices (carbon).
+* *pp.nets*: a list of flow matrices (currently carbon only).
 * *pp.info*: sampling details for each model.
 
 
